Add support for define-based constants

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ include
 generated.h
 enum_importer.c
 enum_importer
+define_importer.c
+define_importer
 fixed_enums.h
 fixed_header.h
+fixed_defines.h
 prep.h
