--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__
 _sdl2.*
 include
-setup/*.h
-setup/*.c
-setup/enum_importer
-setup/define_importer
+*.h
+*.c
+enum_importer
+define_importer
